# vidai

./: .gitignore  pyproject.toml  setup.sh  vidal.py
