[project]
name = "vidai"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"
dependencies = [
    "misaki[en] (>=0.7.16,<0.8.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "kokoro-onnx (>=0.4.2,<0.5.0)",
    "sounddevice (>=0.5.1,<0.6.0)",
    "faster-whisper (>=1.1.1,<2.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
